# NSolver

./: .gitignore  CMakeLists.txt
source/: AllParameters.cpp  AllParameters.h  BoundaryType.h  CMakeLists.txt  ConservationLaw.cpp  ConservationLaw.h  EquationComponents.cpp  EquationComponents.h  FEParameters.cpp  FEParameters.h  MMS.cpp  MMS.h  NSEquation.cpp  NSEquation.h  NSolver.cpp  NSolver.h  NSolver_integrate_force.cpp  NumericalFlux.h  PhysicalParameters.cpp  PhysicalParameters.h  Postprocessor.cpp  Postprocessor.h  TimeSteppingParameters.cpp  TimeSteppingParameters.h  WallForce.cpp  WallForce.h  main.cpp  printVersion.cpp
source/BndNaca4Digit/: BndNaca4Digit.cpp  test.cpp
source/BndNaca4DigitSymm/: BndNaca4DigitSymm.cpp  test.cpp
source/CellDataTransfer/: CellDataTransfer.cpp  CellDataTransfer.inst  children_to_parent.cpp  clear.cpp  get_transfered_data.cpp  parent_to_children.cpp  push_back.cpp
source/MDFILU/: MDFILU.cpp  MapMatrix.cpp
source/Parameters/: AllParameters.cpp  CMakeLists.txt  FEParameters.cpp  PhysicalParameters.cpp  StabilizationParameters.cpp  TimeSteppingParameters.cpp
source/fullVelocityPotential/: apply_kutta_condition.cpp  assemble.cpp  compute.cpp  fullVelocityPotential.cpp  fullVelocityPotential.inst  fullVelocityPotential_Postprocessor.cpp  output_result.cpp  setup_system.cpp  solve.cpp  transfer_solution.cpp
source/linearVelocityPotential/: CMakeLists.txt  assemble.cpp  compute.cpp  linearVelocityPotential.cpp  linearVelocityPotential.inst  linearVelocityPotential_Postprocessor.cpp  output_result.cpp  setup_system.cpp  solve.cpp  transfer_solution.cpp
source/others/: EquationComponents.cpp  MMS.cpp  NSEquation.cpp  Postprocessor.cpp  Tools.cpp  Tools__mark_coarsen_blindly.cpp  Tools__mark_coarsen_guaranteed.cpp  Tools__mark_refine_guaranteed.cpp  Tools__refine_and_coarsen_fixed_number.cpp  Tools__refine_on_threshold.cpp  Tools__set_coarsen_mask.cpp  Tools__set_refine_mask.cpp  WallForce.cpp
source/solver/: CMakeLists.txt  NSolver.cpp  NSolver.inst  apply_laplacian_continuation.cpp  apply_strong_boundary_condtions.cpp  assemble_cell_term.cpp  assemble_face_term.cpp  assemble_system.cpp  calc_artificial_viscosity.cpp  calc_jumps.cpp  calc_laplacian_indicator.cpp  calc_time_step.cpp  check_negative_density_pressure.cpp  compute_refinement_indicators.cpp  initialize.cpp  integrate_force.cpp  output_results.cpp  refine_grid.cpp  run.cpp  setup_system.cpp  solve.cpp
tests/: CMakeLists.txt
tests/case000/: CMakeLists.txt  input.prm.2412
tests/d2_GAMM_channel/: CMakeLists.txt  Gamm_Channel.geo  Gamm_Channel.msh
tests/d2_GAMM_channel/case008000/: input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/: CMakeLists.txt
tests/d2_MMS_subsonic/case003000/: input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/case003001/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/case003002/: input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/case003003/: input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/case003004/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/case003005/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/case003006/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/case003007/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_MMS_subsonic/case003008/: CMakeLists.txt  input.prm  intro.dox  iter_history.out.reference
tests/d2_manifoldCircle/: CMakeLists.txt  circle_half.msh
tests/d2_manifoldCircle/case004000/: input.prm  intro.dox  iter_history.out.reference
tests/d2_manifoldCircle/case004001/: input.prm  intro.dox  iter_history.out.reference
tests/d2_manifoldCircle/case004002/: builds-on  input.prm  intro.dox
tests/d2_manifoldCircle/case004003/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_manifoldCircle/case004004/: input.prm  intro.dox  iter_history.out.reference
tests/d2_manifoldCircle/case004005/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/: 2412.msh  CMakeLists.txt
tests/d2_naca2412/case000/: intro.dox
tests/d2_naca2412/case000000/: CMakeLists.txt  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000001/: CMakeLists.txt  input.prm  input.prm.2412  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000002/: CMakeLists.txt  input.prm  intro.dox  iter_history.out.reference  screen.log.reference
tests/d2_naca2412/case000003/: input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000004/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000005/: builds-on  input.prm  iter_history.out.reference
tests/d2_naca2412/case000006/: CMakeLists.txt  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000007/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000008/: input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000009/: CMakeLists.txt  builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000010/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000011/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000012/: builds-on  input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case000013/: input.prm  intro.dox  iter_history.out.reference
tests/d2_naca2412/case001/: intro.dox
tests/d2_naca2412/case002/: input.prm.2412
tests/d2_naca2412/case003/: builds-on  input.prm.2412  (+1 more)
tests/d2_slide/: CMakeLists.txt
tests/module_CellDataTransfer/: CMakeLists.txt  CellDataTransfer_test.h
tests/module_EulerEquations/: CMakeLists.txt
tests/module_MDFILU/: CMakeLists.txt  MDFILU_test.h
tests/module_NacaBnd/: CMakeLists.txt  NACA0012.geo  NACA0012.msh  NacaBnd_test.h
tests/module_RefineFunction/: CMakeLists.txt  RefineFunction_test.h
(+186 files in other folders)
